remove padding bottom of site nav centered

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2353,7 +2353,8 @@ textarea {
 }
 
 .site-nav--centered {
-  padding-bottom: $gutter-site-mobile;
+  // padding-bottom: $gutter-site-mobile;
+  padding-bottom: 0;
 }
 
 /*================ Site Nav Links ================*/
