change nav font

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2361,6 +2361,8 @@ textarea {
 .site-nav__link {
   display: block;
   white-space: nowrap;
+  text-transform: uppercase;
+  font-size: 1.1rem;
 
   .site-nav--centered & {
     padding-top: 0;
