--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -85,6 +85,8 @@
   <!--[if lte IE 9]><script src="{{ 'theme.js' | asset_url }}"></script><![endif]-->
 
   {{ content_for_header }}
+
+	{{ shop.metafields.loox["global_html_head"] }}
 </head>
 
 <body class="template-{{ template | split: '.' | first }}">
@@ -127,5 +129,7 @@
     {% section 'footer' %}
 
   </div>
+
+	{{ shop.metafields.loox["global_html_body"] }}
 </body>
 </html>
